# bilibili-transcript

./: .gitignore  README.md  TRANSCRIPT_STRATEGY.md  pyproject.toml  requirements.txt  交接文档.md  视觉效果案例.html
bilibili_transcript/: __init__.py  __main__.py  bvid.py  cli.py  download.py  draft_md.py  export_html.py  finalize_md.py  meta.py  subtitles.py  text_post.py  transcribe.py  utils.py  wbi.py
bilibili_transcript/presets/: BV1f3DYBDE9h.json  BV1ijE4zwEHP.json  __init__.py
bilibili_transcript/providers/: __init__.py  base.py  bilibili.py
case_outputs/BV14jDFBuE9d/: 0302巴菲特谈如何学习会计知识_BV14jDFBuE9d_transcript_成稿.html  0302巴菲特谈如何学习会计知识_BV14jDFBuE9d_transcript_成稿.md  BV14jDFBuE9d_transcript.json  BV14jDFBuE9d_transcript.md
case_outputs/BV1728bzzEwA_p1/: BV1728bzzEwA_transcript.json  BV1728bzzEwA_transcript.md  段永平看了不下十遍！这个演讲到底有多神？（高清版）沃伦·巴菲特1998年佛罗里达大学演讲（82分_BV1728bzzEwA_transcript_成稿.html  段永平看了不下十遍！这个演讲到底有多神？（高清版）沃伦·巴菲特1998年佛罗里达大学演讲（82分_BV1728bzzEwA_transcript_成稿.md
case_outputs/BV1728bzzEwA_p2/: BV1728bzzEwA_transcript.json  BV1728bzzEwA_transcript.md  段永平看了不下十遍！这个演讲到底有多神？（高清版）沃伦·巴菲特1998年佛罗里达大学演讲（82分_BV1728bzzEwA_transcript_成稿.html  段永平看了不下十遍！这个演讲到底有多神？（高清版）沃伦·巴菲特1998年佛罗里达大学演讲（82分_BV1728bzzEwA_transcript_成稿.md
case_outputs/BV1RjDKBYEnZ/: BV1RjDKBYEnZ_transcript.json  BV1RjDKBYEnZ_transcript.md  巴菲特和芒格：如何停止浪费生命_BV1RjDKBYEnZ_transcript_成稿.html  巴菲特和芒格：如何停止浪费生命_BV1RjDKBYEnZ_transcript_成稿.md
tests/: test_bvid.py  test_draft_md.py  test_finalize_md.py  test_providers.py  test_text_post.py  test_utils.py
tools/: export_morandi_html.py
(+9 files in other folders)
