[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bilibili-transcript"
version = "0.2.0"
description = "Local video transcript pipeline: subtitles-first, ASR-fallback. Bilibili supported, extensible to other sources."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "requests>=2.28.0",
    "faster-whisper>=1.0.0",
    "yt-dlp>=2024.1.0",
    "browser-cookie3>=0.19.0",
]

[project.scripts]
bilibili-transcript = "bilibili_transcript.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
include = ["bilibili_transcript*"]

[tool.setuptools.package-data]
"bilibili_transcript.presets" = ["*.json"]
